[gd_scene load_steps=7 format=3 uid="uid://hpri5gdawsdq"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_4hj1r"]
[ext_resource type="Script" path="res://Player/smooth_camera.gd" id="2_7qui5"]
[ext_resource type="Script" path="res://Player/crosshair.gd" id="3_0vrit"]
[ext_resource type="PackedScene" uid="uid://dwthq71j2txhk" path="res://Weapons/smg.tscn" id="3_wsx7g"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_x4edi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qe67t"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_4hj1r")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_x4edi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_qe67t")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)

[node name="SmoothCamera" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
top_level = true
cull_mask = 1048573
script = ExtResource("2_7qui5")

[node name="SMG" parent="CameraPivot/SmoothCamera" instance=ExtResource("3_wsx7g")]

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="CameraPivot/SmoothCamera"]
remote_path = NodePath("../../../SubViewportContainer/SubViewport/WeaponCamera")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="WeaponCamera" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
cull_mask = 2
fov = 40.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="Control" parent="CenterContainer"]
layout_mode = 2
script = ExtResource("3_0vrit")
